--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
 
   <div id="app">
-    <h1 class="text-center">{{titolo}}</h1>
+    <div class="container">
+
+      <h1 class="text-center">{{titolo}}</h1>
+      <div class="img__container d-flex justify-content-center mt-3">
+        <img :src="image" alt="nature">
+      </div>
+
+    </div>
   </div>
 
 
