--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
     <div class="container">
 
       <h1 class="text-center">{{titolo}}</h1>
-      <div class="img__container d-flex justify-content-center mt-3">
-        <img :src="image" alt="nature">
+      <div class="img__container d-flex justify-content-center align-items-center mt-1">
+        <img :src="image" :alt="altImage">
+        <button @click="changeImage" type="button" class="btn btn-primary mx-5 h-25">Cambia Immagine</button>
       </div>
 
     </div>
   </div>
 
-
   
-
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <script src="js/script.js"></script>
 </body>
